# c_console_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.c
src/adt/: CMakeLists.txt  vector.c  vector.h
src/console/: CMakeLists.txt  chars.h  colors.h  console.c  console.h  rect.h
src/examples/gol/: CMakeLists.txt  gol.c
src/include/console/: chars.h  console.h  ui.h
